bug fix: wrong height on buttons

--- a/vallek-github.user.css
+++ b/vallek-github.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Github Compact
 @namespace      github.com/openstyles/stylus
-@version        2.5.2
+@version        2.5.3
 @description    Github Compact style + distinctive tabs
 @author         Vallek
 ==/UserStyle== */
@@ -30,6 +30,7 @@
   }
   div[data-testid="top-nav-right"] button[class*="prc-Button-IconButton"] {
     padding: 0 !important;
+    height: auto;
   }
   button[class*="prc-Button-ButtonBase"][class*="styles-module__appHeaderButton"][class*="prc-Button-IconButton-fyge7"] {
     padding: 0 !important;
